[workspace]
members = [
    "crates/marknest",
    "crates/marknest-core",
    "crates/marknest-server",
    "crates/marknest-wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/developer0hye/marknest"
homepage = "https://github.com/developer0hye/marknest"

[workspace.dependencies]
ammonia = "4.1.2"
emojis = "0.6.4"
marknest-core = { version = "0.1.0", path = "crates/marknest-core" }
marknest = { version = "0.1.0", path = "crates/marknest" }
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.17"
toml = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
