[package]
name = "marknest-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
marknest = { path = "../marknest" }
marknest-core = { path = "../marknest-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
