[package]
name = "marknest-server"
description = "Local HTTP fallback service for high-quality Markdown-to-PDF conversion via Playwright"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["markdown", "pdf", "server", "converter"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
marknest.workspace = true
marknest-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
