[package]
name = "marknest-wasm"
description = "WASM bindings for MarkNest Markdown workspace analysis and HTML rendering"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
marknest-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
zip.workspace = true

[dev-dependencies]
