[package]
name = "marknest"
description = "Markdown workspace analyzer and PDF converter CLI"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["markdown", "pdf", "cli", "converter", "documentation"]
categories = ["command-line-utilities", "text-processing"]
exclude = ["playwright-runtime/node_modules/**"]

[dependencies]
marknest-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
ureq = "2.12"
zip.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
zip.workspace = true
